force-app/main/default/objects/Cargo__c/Cargo__c.object-meta.xml
<CustomObject>
    <label>Cargo</label>
    <nameField>
        <displayFormat>CG-{0000000000}</displayFormat>
        <label>Cargo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cargo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>