force-app/main/default/objects/Cargo__c/fields/AcceptedQuantityInUnit__c.field-meta.xml
<CustomField>
    <fullName>AcceptedQuantityInUnit__c</fullName>
    <formula>IF(QuantityInUnit__c &gt;= QuantityPerUnit__c , QuantityInUnit__c -  DamagedQuantityInUnit__c - MissingQuantityinUnit__c, QuantityPerUnit__c -  DamagedQuantityInUnit__c -  MissingQuantityinUnit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Accepted Quantity in Unit=Quantity in(per) Unit-Missing Quantity in Unit-Damaged Quantity in Unit</inlineHelpText>
    <label>Accepted Quantity in Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>