force-app/main/default/objects/Cargo__c/fields/AgingDaysTillExpire__c.field-meta.xml
<CustomField>
    <fullName>AgingDaysTillExpire__c</fullName>
    <formula>ExpiredDate__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aging Days=Expire Date-Today
*Minus(-) means overdue.</inlineHelpText>
    <label>Aging Days till Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>