force-app/main/default/objects/Cargo__c/fields/CargoAccountID__c.field-meta.xml
<CustomField>
    <fullName>CargoAccountID__c</fullName>
    <label>Cargo Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>