force-app/main/default/objects/Cargo__c/fields/CargoLifeCycle__c.field-meta.xml
<CustomField>
    <fullName>CargoLifeCycle__c</fullName>
    <label>CARGO LIFE CYCLE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoLifeCycle</valueSetName>
    </valueSet>
</CustomField>