force-app/main/default/objects/Cargo__c/fields/CargoName__c.field-meta.xml
<CustomField>
    <fullName>CargoName__c</fullName>
    <label>Cargo Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>