force-app/main/default/objects/Cargo__c/fields/CargoTroubleNote__c.field-meta.xml
<CustomField>
    <fullName>CargoTroubleNote__c</fullName>
    <label>Cargo Trouble Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>