force-app/main/default/objects/Cargo__c/fields/CargoType__c.field-meta.xml
<CustomField>
    <fullName>CargoType__c</fullName>
    <label>Cargo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitType</valueSetName>
    </valueSet>
</CustomField>