force-app/main/default/objects/Cargo__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>LastWosLineItem__r.WorkOrderID__r.Customer__r.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>