force-app/main/default/objects/Cargo__c/fields/CustomerMobile__c.field-meta.xml
<CustomField>
    <fullName>CustomerMobile__c</fullName>
    <label>Customer Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>