force-app/main/default/objects/Cargo__c/fields/CustomerNameText__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameText__c</fullName>
    <label>Customer Name-text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>