force-app/main/default/objects/Cargo__c/fields/DamagedQuantityInUnit__c.field-meta.xml
<CustomField>
    <fullName>DamagedQuantityInUnit__c</fullName>
    <label>Damaged Quantity in Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>