force-app/main/default/objects/Cargo__c/fields/DataUpload__c.field-meta.xml
<CustomField>
    <fullName>DataUpload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Upload</label>
    <type>Checkbox</type>
</CustomField>