force-app/main/default/objects/Cargo__c/fields/DeliveryAddressNew__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressNew__c</fullName>
    <label>DELIVERY ADDRESS</label>
    <type>TextArea</type>
</CustomField>