force-app/main/default/objects/Cargo__c/fields/DestinationWarehouse__c.field-meta.xml
<CustomField>
    <fullName>DestinationWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Warehouse</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>CARGO (DESTINATION WAREHOUSE)</relationshipLabel>
    <relationshipName>CargoDestinationWarehouse</relationshipName>
    <type>Lookup</type>
</CustomField>