force-app/main/default/objects/Cargo__c/fields/EquipmentIdentity__c.field-meta.xml
<CustomField>
    <fullName>EquipmentIdentity__c</fullName>
    <inlineHelpText>Include IMEI(International Mobile Equipment Identity)</inlineHelpText>
    <label>Equipment Identity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>