force-app/main/default/objects/Cargo__c/fields/ExpectedInboundDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedInboundDate__c</fullName>
    <label>Expected Inbound Date</label>
    <type>Date</type>
</CustomField>