force-app/main/default/objects/Cargo__c/fields/ExpireDateSKUNumber__c.field-meta.xml
<CustomField>
    <fullName>ExpireDateSKUNumber__c</fullName>
    <formula>Product__r.SKUNumber__c &amp; LPAD(Text(Month(ExpiredDate__c)),2,&quot;0&quot;) &amp; Right(Text(Year(ExpiredDate__c)),2)</formula>
    <label>EXPIRE DATE SKU NUMBER</label>
    <type>Text</type>
</CustomField>