force-app/main/default/objects/Cargo__c/fields/ExpiredDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiredDate__c</fullName>
    <label>EXPIRED DATE</label>
    <type>Date</type>
</CustomField>