force-app/main/default/objects/Cargo__c/fields/FacilityForManualOperation__c.field-meta.xml
<CustomField>
    <fullName>FacilityForManualOperation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility for Manual Operation</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>CARGO</relationshipLabel>
    <relationshipName>CARGO</relationshipName>
    <type>Lookup</type>
</CustomField>