force-app/main/default/objects/Cargo__c/fields/GoodsPOID__c.field-meta.xml
<CustomField>
    <fullName>GoodsPOID__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/clofor_com_cfs__GoodsPurchasingOrder__c/&apos; + LastWosLineItem__r.WorkOrderService__r.WorkOrder__r.PurchasingOrderID__c  +&apos;/view&apos;, LastWosLineItem__r.WorkOrderService__r.WorkOrder__r.PurchasingOrderID__r.Name)</formula>
    <label>Goods P/O ID</label>
    <type>Text</type>
</CustomField>