force-app/main/default/objects/Cargo__c/fields/GoodsSOID__c.field-meta.xml
<CustomField>
    <fullName>GoodsSOID__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/clofor_com_cfs__GoodsPurchasingOrder__c/&apos; + LastWosLineItem__r.WorkOrderService__r.WorkOrder__r.SalesOrderID__c 
 +&apos;/view&apos;, LastWosLineItem__r.WorkOrderService__r.WorkOrder__r.SalesOrderID__r.Name)</formula>
    <label>Goods S/O ID</label>
    <type>Text</type>
</CustomField>