force-app/main/default/objects/Cargo__c/fields/GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossWeight__c</fullName>
    <label>Gross Weight(KG)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>