force-app/main/default/objects/Cargo__c/fields/InboundDate__c.field-meta.xml
<CustomField>
    <fullName>InboundDate__c</fullName>
    <label>Inbound Date</label>
    <type>DateTime</type>
</CustomField>