force-app/main/default/objects/Cargo__c/fields/InventoryType__c.field-meta.xml
<CustomField>
    <fullName>InventoryType__c</fullName>
    <formula>text( Product__r.InventoryType__c )</formula>
    <label>Inventory Type</label>
    <type>Text</type>
</CustomField>