force-app/main/default/objects/Cargo__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <label>Item Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>