force-app/main/default/objects/Cargo__c/fields/LastLocator__c.field-meta.xml
<CustomField>
    <fullName>LastLocator__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/clofor_com_cfs__LOCATOR__c/&apos; +
LastWosLineItem__r.Locator__r.Id +&apos;/view&apos;, LastWosLineItem__r.Locator__r.Name)</formula>
    <label>Last Locator ID</label>
    <type>Text</type>
</CustomField>