force-app/main/default/objects/Cargo__c/fields/LastLocatorCode__c.field-meta.xml
<CustomField>
    <fullName>LastLocatorCode__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/clofor_com_cfs__LOCATOR__c/&apos; +LastWosLineItem__r.Locator__r.Id +&apos;/view&apos;, LastWosLineItem__r.Locator__r.LocatorCode__c)</formula>
    <label>Last Locator Code</label>
    <type>Text</type>
</CustomField>