force-app/main/default/objects/Cargo__c/fields/LastMileTruckBike__c.field-meta.xml
<CustomField>
    <fullName>LastMileTruckBike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Mile Truck/Bike</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>CARGO</relationshipLabel>
    <relationshipName>CARGO</relationshipName>
    <type>Lookup</type>
</CustomField>