force-app/main/default/objects/Cargo__c/fields/LastWOJobRequestID__c.field-meta.xml
<CustomField>
    <fullName>LastWOJobRequestID__c</fullName>
    <formula>LastWosLineItem__r.WorkOrderService__r.WorkOrder__r.JobReqeustIDFromCustomer__c</formula>
    <label>Last W/O Job Request ID</label>
    <type>Text</type>
</CustomField>