force-app/main/default/objects/Cargo__c/fields/LastWORecordType__c.field-meta.xml
<CustomField>
    <fullName>LastWORecordType__c</fullName>
    <formula>LastWosLineItem__r.WorkOrderService__r.WorkOrder__r.RecordType.Name</formula>
    <label>Last W/O Record Type</label>
    <type>Text</type>
</CustomField>