force-app/main/default/objects/Cargo__c/fields/LastWOS__c.field-meta.xml
<CustomField>
    <fullName>LastWOS__c</fullName>
    <deprecated>true</deprecated>
    <label>LAST W/O/S</label>
    <length>100</length>
    <type>Text</type>
</CustomField>