force-app/main/default/objects/Cargo__c/fields/LastWosLineItem__c.field-meta.xml
<CustomField>
    <fullName>LastWosLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last WOS Line Item</label>
    <referenceTo>WOSLineItem__c</referenceTo>
    <relationshipLabel>CARGO</relationshipLabel>
    <relationshipName>Cargoes</relationshipName>
    <type>Lookup</type>
</CustomField>