force-app/main/default/objects/Cargo__c/fields/LastWOSRecordType__c.field-meta.xml
<CustomField>
    <fullName>LastWOSRecordType__c</fullName>
    <formula>LastWosLineItem__r.WOSRecordType__c</formula>
    <label>LAST W/O/S RECORD TYPE</label>
    <type>Text</type>
</CustomField>