force-app/main/default/objects/Cargo__c/fields/Locator__c.field-meta.xml
<CustomField>
    <fullName>Locator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locator for Manual Operation</label>
    <referenceTo>LOCATOR__c</referenceTo>
    <relationshipLabel>Cargos</relationshipLabel>
    <relationshipName>Cargos</relationshipName>
    <type>Lookup</type>
</CustomField>