force-app/main/default/objects/Cargo__c/fields/LotNumber__c.field-meta.xml
<CustomField>
    <fullName>LotNumber__c</fullName>
    <inlineHelpText>A lot number is an identification number assigned to a particular quantity or lot of material from a single manufacturer.</inlineHelpText>
    <label>Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>