force-app/main/default/objects/Cargo__c/fields/LotQuantity__c.field-meta.xml
<CustomField>
    <fullName>LotQuantity__c</fullName>
    <label>Lot Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>