force-app/main/default/objects/Cargo__c/fields/ManufacturedDate__c.field-meta.xml
<CustomField>
    <fullName>ManufacturedDate__c</fullName>
    <label>MANUFACTURED DATE</label>
    <type>Date</type>
</CustomField>