force-app/main/default/objects/Cargo__c/fields/MissingQuantityinUnit__c.field-meta.xml
<CustomField>
    <fullName>MissingQuantityinUnit__c</fullName>
    <label>Missing Quantity in Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>