force-app/main/default/objects/Cargo__c/fields/OriginWarehouse__c.field-meta.xml
<CustomField>
    <fullName>OriginWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Warehouse</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>CARGO (ORIGIN WAREHOUSE)</relationshipLabel>
    <relationshipName>CargoOriginWarehouse</relationshipName>
    <type>Lookup</type>
</CustomField>