force-app/main/default/objects/Cargo__c/fields/OutboundDate__c.field-meta.xml
<CustomField>
    <fullName>OutboundDate__c</fullName>
    <label>Outbound Date/Time</label>
    <type>DateTime</type>
</CustomField>