force-app/main/default/objects/Cargo__c/fields/P_I_CEmailOfDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>P_I_CEmailOfDeliveryAddress__c</fullName>
    <label>P.I.C Email of Delivery Address</label>
    <type>Email</type>
</CustomField>