force-app/main/default/objects/Cargo__c/fields/ParentCargo__c.field-meta.xml
<CustomField>
    <fullName>ParentCargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Cargo</label>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>カーゴ (Parent Cargo)</relationshipLabel>
    <relationshipName>ParentCargo</relationshipName>
    <type>Lookup</type>
</CustomField>