force-app/main/default/objects/Cargo__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <label>Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>