force-app/main/default/objects/Cargo__c/fields/PICMobileOfDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>PICMobileOfDeliveryAddress__c</fullName>
    <label>P.I.C Mobile of Delivery Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>