force-app/main/default/objects/Cargo__c/fields/PICResellerAgent__c.field-meta.xml
<CustomField>
    <fullName>PICResellerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of Reseller Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CARGO (P.I.C of Reseller Agent)</relationshipLabel>
    <relationshipName>CargoPICResellerAgent</relationshipName>
    <type>Lookup</type>
</CustomField>