force-app/main/default/objects/Cargo__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>CARGO</relationshipLabel>
    <relationshipName>Cargo</relationshipName>
    <type>Lookup</type>
</CustomField>