force-app/main/default/objects/Cargo__c/fields/PlannedWeight__c.field-meta.xml
<CustomField>
    <fullName>PlannedWeight__c</fullName>
    <label>Planned Weight</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>