force-app/main/default/objects/Cargo__c/fields/PlannedWeightCal__c.field-meta.xml
<CustomField>
    <fullName>PlannedWeightCal__c</fullName>
    <formula>CASE(  Product__r.WeightUnit__c 
, &apos;Kg&apos;, PlannedWeight__c * 1000 
, &apos;g&apos;, PlannedWeight__c 
, &apos;Ton&apos;, PlannedWeight__c * 1000000 
, PlannedWeight__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Convert to baseline unit</inlineHelpText>
    <label>Planned Weight Cal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>