force-app/main/default/objects/Cargo__c/fields/PreviousCargo__c.field-meta.xml
<CustomField>
    <fullName>PreviousCargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Cargo</label>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>NEXT CARGO</relationshipLabel>
    <relationshipName>PreviousCargo</relationshipName>
    <type>Lookup</type>
</CustomField>