force-app/main/default/objects/Cargo__c/fields/PrintCheckbox__c.field-meta.xml
<CustomField>
    <fullName>PrintCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Checkbox</label>
    <type>Checkbox</type>
</CustomField>