force-app/main/default/objects/Cargo__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>Cargos</relationshipLabel>
    <relationshipName>Cargos</relationshipName>
    <type>Lookup</type>
</CustomField>