force-app/main/default/objects/Cargo__c/fields/ProductDetails__c.field-meta.xml
<CustomField>
    <fullName>ProductDetails__c</fullName>
    <formula>Text( Product__r.UnitType__c) &amp; &apos; of &apos; &amp; Text( Product__r.QuantityPerUnit__c ) &amp; &apos; &apos; &amp; Product__r.ProductName__c</formula>
    <label>Product Details</label>
    <type>Text</type>
</CustomField>