force-app/main/default/objects/Cargo__c/fields/ProductSKUNumber__c.field-meta.xml
<CustomField>
    <fullName>ProductSKUNumber__c</fullName>
    <formula>Product__r.SKUNumber__c</formula>
    <label>Product SKU Number</label>
    <type>Text</type>
</CustomField>