force-app/main/default/objects/Cargo__c/fields/QrCodeImage__c.field-meta.xml
<CustomField>
    <fullName>QrCodeImage__c</fullName>
    <formula>IF( Text(Product__r.CodeImageType__c)=&quot;Barcode&quot;,IMAGE(&quot;https://www.scandit.com/wp-content/themes/bridge-child/wbq_barcode_gen.php?symbology=code128&amp;value=&quot;+Product__r.QR_Code__c +&quot;&amp;size=80&amp;ec=L&quot;,Product__r.QR_Code__c), IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + Product__r.QR_Code__c, &apos;Product QR Code&apos; ))</formula>
    <label>QR Code Image</label>
    <type>Text</type>
</CustomField>