force-app/main/default/objects/Cargo__c/fields/QRLabelURLForDownload__c.field-meta.xml
<CustomField>
    <fullName>QRLabelURLForDownload__c</fullName>
    <label>QR Label URL for Download</label>
    <type>Url</type>
</CustomField>