force-app/main/default/objects/Cargo__c/fields/QualityLevel__c.field-meta.xml
<CustomField>
    <fullName>QualityLevel__c</fullName>
    <label>Quality Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuantityLevel</valueSetName>
    </valueSet>
</CustomField>