force-app/main/default/objects/Cargo__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <deprecated>true</deprecated>
    <description>Quantity of product inside the cargo</description>
    <inlineHelpText>Quantity of product inside the cargo</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>