force-app/main/default/objects/Cargo__c/fields/QuantityCal__c.field-meta.xml
<CustomField>
    <fullName>QuantityCal__c</fullName>
    <formula>IF( 
ISPICKVAL(Product__r.BillingType__c, &apos;Weight&apos;),
WeightCal__c,
MAX(1,LotQuantity__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>