force-app/main/default/objects/Cargo__c/fields/QuantityInUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityInUnit__c</fullName>
    <inlineHelpText>Quantity of product inside the cargo</inlineHelpText>
    <label>Quantity in Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>