force-app/main/default/objects/Cargo__c/fields/QuantityPerUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityPerUnit__c</fullName>
    <formula>Product__r.QuantityPerUnit__c</formula>
    <label>Quantity Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>