force-app/main/default/objects/Cargo__c/fields/QuantityVarianceinUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityVarianceinUnit__c</fullName>
    <formula>AcceptedQuantityInUnit__c - Product__r.QuantityPerUnit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity Variance in Unit=Accepted Quantity in Unit-Quantity Per Unit
(Minus means shortage and Plus means overage)</inlineHelpText>
    <label>Quantity Variance in Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>