force-app/main/default/objects/Cargo__c/fields/RecipientCityProvince__c.field-meta.xml
<CustomField>
    <fullName>RecipientCityProvince__c</fullName>
    <label>Recipient City/Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecipientCountry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>City_Province</valueSetName>
    </valueSet>
</CustomField>