force-app/main/default/objects/Cargo__c/fields/RecipientDistrictCity__c.field-meta.xml
<CustomField>
    <fullName>RecipientDistrictCity__c</fullName>
    <label>Recipient District/City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SenderCityProvince__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DistrictCity</valueSetName>
    </valueSet>
</CustomField>