force-app/main/default/objects/Cargo__c/fields/RequestContactfromCustomer__c.field-meta.xml
<CustomField>
    <fullName>RequestContactfromCustomer__c</fullName>
    <label>Request Contact from Customer</label>
    <type>Date</type>
</CustomField>