force-app/main/default/objects/Cargo__c/fields/ResellerAgent__c.field-meta.xml
<CustomField>
    <fullName>ResellerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cargo (Reseller Agent)</relationshipLabel>
    <relationshipName>CargoResellerAgent</relationshipName>
    <type>Lookup</type>
</CustomField>