force-app/main/default/objects/Cargo__c/fields/SenderAddress__c.field-meta.xml
<CustomField>
    <fullName>SenderAddress__c</fullName>
    <label>Sender Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>