force-app/main/default/objects/Cargo__c/fields/SenderMobile__c.field-meta.xml
<CustomField>
    <fullName>SenderMobile__c</fullName>
    <label>Sender Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>