force-app/main/default/objects/Cargo__c/fields/ShippingZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingZipPostalCode__c</fullName>
    <label>Shipping Zip Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>