force-app/main/default/objects/Cargo__c/fields/SubscriberIdentity__c.field-meta.xml
<CustomField>
    <fullName>SubscriberIdentity__c</fullName>
    <inlineHelpText>Include IMSI(International Mobile Subscriber Identity)</inlineHelpText>
    <label>Subscriber Identity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>