force-app/main/default/objects/Cargo__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>text( QuantityPerUnit__c )&amp; &apos; in &apos; &amp; text( CargoType__c )
&amp; &apos; &apos; &amp;  Product__r.ProductName__c  &amp; &apos; - &apos; &amp;   ExpireDateSKUNumber__c</formula>
    <label>QR Display Summary</label>
    <type>Text</type>
</CustomField>