force-app/main/default/objects/Cargo__c/fields/UsedType__c.field-meta.xml
<CustomField>
    <fullName>UsedType__c</fullName>
    <label>Used Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UsedType</valueSetName>
    </valueSet>
</CustomField>