force-app/main/default/objects/Cargo__c/fields/WeightCal__c.field-meta.xml
<CustomField>
    <fullName>WeightCal__c</fullName>
    <formula>CASE(  Product__r.WeightUnit__c  
, &apos;Kg&apos;,  Weight__c * 1000
, &apos;g&apos;, Weight__c
, &apos;Ton&apos;, Weight__c * 1000000
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Convert to baseline unit</inlineHelpText>
    <label>Weight Cal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>