force-app/main/default/objects/Cargo__c/listViews/CargoForSalesInStock.listView-meta.xml
<ListView>
    <fullName>CargoForSalesInStock</fullName>
    <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
    <columns>Product__c</columns>
    <columns>NAME</columns>
    <columns>CargoLifeCycle__c</columns>
    <columns>CargoType__c</columns>
    <columns>AcceptedQuantityInUnit__c</columns>
    <columns>QuantityInUnit__c</columns>
    <columns>QuantityPerUnit__c</columns>
    <columns>QrCodeImage__c</columns>
    <columns>ManufacturedDate__c</columns>
    <columns>ExpiredDate__c</columns>
    <columns>Locator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CargoLifeCycle__c</field>
        <operation>equals</operation>
        <value>For sales</value>
    </filters>
    <filters>
        <field>LastWOSRecordType__c</field>
        <operation>equals</operation>
        <value>Putaway</value>
    </filters>
    <filters>
        <field>ExpiredDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ExpiredDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>1.1. Cargo for Sales in Stock</label>
</ListView>