force-app/main/default/objects/Cargo__c/listViews/CargoInStock.listView-meta.xml
<ListView>
    <fullName>CargoInStock</fullName>
    <columns>Product__c</columns>
    <columns>NAME</columns>
    <columns>CargoLifeCycle__c</columns>
    <columns>CargoType__c</columns>
    <columns>AcceptedQuantityInUnit__c</columns>
    <columns>QuantityInUnit__c</columns>
    <columns>QuantityPerUnit__c</columns>
    <columns>QrCodeImage__c</columns>
    <columns>ManufacturedDate__c</columns>
    <columns>ExpiredDate__c</columns>
    <columns>Locator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CargoLifeCycle__c</field>
        <operation>equals</operation>
        <value>For sales,For processing,Under quality check,Returned from customer,Damaged,Wet,Expired</value>
    </filters>
    <filters>
        <field>LastWOSRecordType__c</field>
        <operation>equals</operation>
        <value>Putaway</value>
    </filters>
    <label>1.Cargo In Stock</label>
</ListView>