force-app/main/default/objects/Cargo__c/listViews/ExpiredCargo.listView-meta.xml
<ListView>
    <fullName>ExpiredCargo</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>ProductDetails__c</columns>
    <columns>CargoLifeCycle__c</columns>
    <columns>ExpiredDate__c</columns>
    <columns>AgingDaysTillExpire__c</columns>
    <columns>AcceptedQuantityInUnit__c</columns>
    <columns>QuantityInUnit__c</columns>
    <columns>QuantityPerUnit__c</columns>
    <columns>Summary__c</columns>
    <columns>StockCountingStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpiredDate__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Expired Cargo</label>
    <language>en_US</language>
</ListView>