force-app/main/default/objects/Cargo__c/listViews/FEFOCargoList.listView-meta.xml
<ListView>
    <fullName>FEFOCargoList</fullName>
    <columns>Product__c</columns>
    <columns>NAME</columns>
    <columns>ExpiredDate__c</columns>
    <columns>AgingDaysTillExpire__c</columns>
    <columns>LastLocator__c</columns>
    <columns>LastLocatorCode__c</columns>
    <columns>LastWosLineItem__c</columns>
    <columns>Summary__c</columns>
    <columns>CargoLifeCycle__c</columns>
    <columns>CargoType__c</columns>
    <columns>Quantity__c</columns>
    <columns>QuantityInUnit__c</columns>
    <columns>AcceptedQuantityInUnit__c</columns>
    <columns>QuantityPerUnit__c</columns>
    <columns>ManufacturedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CargoLifeCycle__c</field>
        <operation>equals</operation>
        <value>For sales</value>
    </filters>
    <filters>
        <field>LastWOSRecordType__c</field>
        <operation>equals</operation>
        <value>Putaway</value>
    </filters>
    <filters>
        <field>InventoryType__c</field>
        <operation>contains</operation>
        <value>FEFO</value>
    </filters>
    <label>FEFO Cargo List</label>
</ListView>